feat: modify to deploy by gh-pages

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"package": "svelte-kit sync && svelte-package && publint",
 		"prepublishOnly": "npm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"predeploy": "yarn run build",
+		"deploy": "gh-pages -d build"
 	},
 	"exports": {
 		".": {
@@ -31,6 +33,7 @@
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"autoprefixer": "^10.4.19",
+		"gh-pages": "^6.2.0",
 		"postcss": "^8.4.40",
 		"publint": "^0.1.9",
 		"svelte": "^4.2.7",
